lfs458/ch11-ingress/solutions/gw-app-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gw-app-route
spec:
  parentRefs:
  - name: main-gateway
  hostnames:
  - "gw-app.vega.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: gw-app
      port: 80
